--- a/Problem-2/ansible-cm/ansible.cfg
+++ b/Problem-2/ansible-cm/ansible.cfg
@@ -11,7 +11,7 @@
 
 # some basic default values...
 
-inventory      = inventory
+inventory      = inventory/
 #library        = /usr/share/my_modules/
 #module_utils   = /usr/share/my_module_utils/
 #remote_tmp     = ~/.ansible/tmp
@@ -133,7 +133,7 @@ remote_user = ec2-user
 
 # if set, always use this private key file for authentication, same as
 # if passing --private-key to ansible or ansible-playbook
-#private_key_file = /path/to/file
+private_key_file = devops.pem 
 
 # If set, configures the path to the Vault password file as an alternative to
 # specifying --vault-password-file on the command line.
