--- a/Problem-4/ansible-cm/roles/nginx-wordpress/tasks/main.yml
+++ b/Problem-4/ansible-cm/roles/nginx-wordpress/tasks/main.yml
@@ -4,12 +4,13 @@
 #
 - name: Update apt-get repo and cache
   apt: update_cache=yes force_apt_get=yes
+  ignore_errors: true
 
 - name: Install nginx software
   apt:
     name: "{{ software }}" 
     state: present
-
+                                                                             
 - name: Remove apache if present
   apt:
     name: apache2
