--- a/Problem-8/nginx.yml
+++ b/Problem-8/nginx.yml
@@ -4,7 +4,7 @@ kind: ConfigMap
 metadata:
   name: nginx
 data:
-  nginx.default: |
+  default.conf: |
     server {
       listen       80;
       listen  [::]:80;
@@ -84,3 +84,17 @@ spec:
         configMap:
           name: nginx
 status: {}
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+     name: nginx
+spec:
+     type: NodePort
+     selector:
+          app: nginx
+     ports:
+         - port: 8080
+           targetPort: 80
+           nodePort: 30123
