--- a/Problem-10/clusterconfig.yml
+++ b/Problem-10/clusterconfig.yml
@@ -5,12 +5,7 @@ metadata:
   region: ap-south-1
 nodeGroups:
 - name: ng1
-  desiredCapacity: 1
-  instanceType: t2.micro
-  ssh:
-    publicKeyName: rohit_eks
-- name: ng2
-  desiredCapacity: 1
-  instanceType: t2.micro
+  desiredCapacity: 2
+  instanceType: t2.small
   ssh:
     publicKeyName: rohit_eks
