--- a/Problem-10/ingress.yml
+++ b/Problem-10/ingress.yml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: alb
     nginx.ingress.kubernetes.io/rewrite-target: /
+    alb.ingress.kubernetes.io/scheme: internet-facing
 spec:
   rules:
   - http:
