--- a/Problem-10/nginx.yml
+++ b/Problem-10/nginx.yml
@@ -91,9 +91,10 @@ kind: Service
 metadata:
      name: nginx
 spec:
-     type: ClusterIP
+     type: NodePort
      selector:
           app: nginx
      ports:
          - port: 8080
            targetPort: 80
+           nodePort: 31200
