--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-Problem-1/terraform-code/.terraform
-Problem-1/terraform-code/.terraform.lock.hcl
+*.terraform
+*.terraform.lock.hcl
 Problem-2/ansible-cm/devops.pem
