--- a/Problem-2/ansible-cm/roles/nginx-wordpress/tasks/main.yml
+++ b/Problem-2/ansible-cm/roles/nginx-wordpress/tasks/main.yml
@@ -4,17 +4,16 @@
 #
 - name: Update apt-get repo and cache
   apt: update_cache=yes force_apt_get=yes
-  ignore_errors: true
-
-- name: Install nginx software
-  apt:
-    name: "{{ software }}" 
-    state: present
 
 - name: Remove apache if present
   apt:
     name: apache2
     state: absent
+
+- name: Install nginx software
+  apt:
+    name: "{{ software }}" 
+    state: present
 
 - name: start service
   service:
@@ -51,7 +50,7 @@
     state: absent
 
 - name: copy nginx config file
-  copy:
+  template:
     src: nginx-app.conf
     dest: /etc/nginx/conf.d/
   notify: restart nginx service
